# isabel

./: .gitignore  COPYING  CREDITS  INSTALL  Makefile  Makefile.head  Makefile.tail
CONFIG/: Makefile.compiler  Makefile.compiler.g++  Makefile.compiler.g++.Darwin  Makefile.compiler.g++.Darwin.i386  Makefile.compiler.g++.Linux  Makefile.compiler.g++.Linux.armv4l  Makefile.compiler.gcc  Makefile.compiler.gcc.Linux  Makefile.compiler.gcc.Linux.i586  Makefile.compiler.insure  Makefile.compiler.insure.Linux  Makefile.compiler.insure.Linux.i686  Makefile.os  Makefile.os.Darwin  Makefile.os.Linux  Makefile.os.SunOS  Makefile.os.package.STD.Darwin  Makefile.os.package.STD.Linux  Makefile.os.package.STD.SunOS  Makefile.os.package.THREADS.Darwin  Makefile.os.package.THREADS.SunOS  Makefile.os.package.X11.Linux  Makefile.os.package.X11.SunOS  Makefile.package  Makefile.package.ACODECS  Makefile.package.FFMPEG  Makefile.package.GWR  Makefile.package.ICF2-NON-THREADED  Makefile.package.ICF2-THREADED  Makefile.package.ITCL  Makefile.package.JARS  Makefile.package.RTP-NON-THREADED  Makefile.package.RTP-THREADED  Makefile.package.SDK  Makefile.package.STD  Makefile.package.THREADS  Makefile.package.VCODECS  Makefile.package.VUTILS-NON-THREADED  Makefile.package.VUTILS-THREADED  Makefile.package.X11
activities/: Makefile  act.qualities
admin/: Makefile  install_dev_packages.sh  mkpkg  version.mgr
components/: Makefile
customers/: Makefile
doc/: COPYRIGHT  ChangeLog.english  ChangeLog.espanol  GPLheader.c  GPLheader.cc  GPLheader.html  Makefile
lib/libvnc/linux/: AUTHORS  COPYING  Makefile.am  configure.ac
lib/libvnc/linux/isabel/: Makefile
(+3755 files in other folders)
